2.92 crashes when opening 2.83 files containing VSE strips created using Python API #85762

Closed
opened 2021-02-18 11:16:35 +01:00 by Yann Lanthony · 6 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.79

Blender Version
Broken: version: 2.92.0 Release Candidate, branch: master, commit date: 2021-02-17 17:55, hash: 3bb58e2a7c
Worked: 2.91

Short description of error
Blender 2.92 crashes when trying to open a 2.83 file containing VSE strips created using the Python API (e.g with sequence_editor.sequences.new_scene).
This seems related to the fact that in this case, the strip's transform and crop members are not initialized until used in 2.83.
Indeed, the crash happens in versioning_290.c within the seq_convert_transform_crop function which tries to access uninitialized strip->crop and strip->transform.

Exact steps for others to reproduce the error

  1. Open Blender 2.83 (any minor version)
  2. In a Console area, create a strip from a 3D scene
    • C.scene.sequence_editor.sequences.new_scene("Strip", D.scenes.new("Scene2"), 1, 1)
  3. Save this file
  4. Try to open it in 2.92

A sample 2.83 file is attached to the ticket, to directly test step 4.
strip_crash.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.79 **Blender Version** Broken: version: 2.92.0 Release Candidate, branch: master, commit date: 2021-02-17 17:55, hash: `3bb58e2a7c` Worked: 2.91 **Short description of error** Blender 2.92 crashes when trying to open a 2.83 file containing VSE strips created using the Python API (e.g with `sequence_editor.sequences.new_scene`). This seems related to the fact that in this case, the strip's transform and crop members are not initialized until used in 2.83. Indeed, the crash happens in `versioning_290.c` within the `seq_convert_transform_crop` function which tries to access uninitialized strip->crop and strip->transform. **Exact steps for others to reproduce the error** 1. Open Blender 2.83 (any minor version) 2. In a Console area, create a strip from a 3D scene * ` C.scene.sequence_editor.sequences.new_scene("Strip", D.scenes.new("Scene2"), 1, 1)` 3. Save this file 4. Try to open it in 2.92 A sample 2.83 file is attached to the ticket, to directly test step 4. [strip_crash.blend](https://archive.blender.org/developer/F9814727/strip_crash.blend)
Author

Added subscriber: @yann-lty

Added subscriber: @yann-lty

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Can reproduce, though strip crop and transform should be always initialized since 2.80 1fd7b380f4

Apparently patch wasn't working correctly.

Can reproduce, though strip crop and transform should be always initialized since 2.80 1fd7b380f4 Apparently patch wasn't working correctly.

This issue was referenced by c297bef9af

This issue was referenced by c297bef9aff5d6eeea26ddd869f4dc03a34d3457

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2021-02-18 19:02:12 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85762
No description provided.